<resources>
    <string name="app_name">My Application</string>
    <string name="buttonSpeech" />
    <string name="music_title">single line text view that scrolls automatically if the text is too long to fit in the widget</string>
    <string name="button_play" >play</string>
    <string name="button_next">next</string>
    <string name="button_previous" >previous</string>
    <string name="music_image">music image</string>
    <string name="music_time_pass">00:00</string>
    <string name="music_time_rest">00:00</string>
</resources>